[gd_scene load_steps=10 format=2]

[ext_resource path="res://Game Over Screen/Assets/Sprites/RetryButton.png" type="Texture" id=1]
[ext_resource path="res://Game Over Screen/Assets/Sprites/GoBackButton.png" type="Texture" id=2]
[ext_resource path="res://Game Over Screen/Assets/Sprites/logo_gameover.png" type="Texture" id=3]
[ext_resource path="res://Game Over Screen/Assets/Scripts/GameOverScreen.gd" type="Script" id=4]
[ext_resource path="res://TitleScreen/Assets/Fade_In/FadeIn.tscn" type="PackedScene" id=5]
[ext_resource path="res://Game Over Screen/Assets/Sprites/GoBackButton-hover.png" type="Texture" id=6]
[ext_resource path="res://Game Over Screen/Assets/Sprites/RetryButton-hover.png" type="Texture" id=7]
[ext_resource path="res://Game Over Screen/Assets/Sprites/LevelsButton-hover.png" type="Texture" id=8]
[ext_resource path="res://Game Over Screen/Assets/Sprites/LevelsButton.png" type="Texture" id=9]

[node name="GameOverScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Walls" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls"]
build_mode = 1
polygon = PoolVector2Array( 640, 0, 640, 336, 0, 336, 0, 0, -64, 0, -64, 352, 736, 352, 736, 0 )

[node name="Menu" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 640.0
margin_bottom = 160.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 164.0
margin_right = 640.0
margin_bottom = 330.0
alignment = 1

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_left = 270.0
margin_right = 370.0
margin_bottom = 166.0
custom_constants/separation = 8
alignment = 1

[node name="RetryButton" type="TextureButton" parent="Menu/CenterRow/Buttons"]
margin_right = 100.0
margin_bottom = 50.0
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 7 )
texture_focused = ExtResource( 7 )
stretch_mode = 3

[node name="LevelsButton" type="TextureButton" parent="Menu/CenterRow/Buttons"]
margin_top = 58.0
margin_right = 100.0
margin_bottom = 108.0
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 8 )
texture_focused = ExtResource( 8 )

[node name="GoBackButton" type="TextureButton" parent="Menu/CenterRow/Buttons"]
margin_top = 116.0
margin_right = 100.0
margin_bottom = 166.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 6 )
texture_focused = ExtResource( 6 )

[node name="FadeIn" parent="." instance=ExtResource( 5 )]
visible = false
[connection signal="pressed" from="Menu/CenterRow/Buttons/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/LevelsButton" to="." method="_on_LevelsButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/GoBackButton" to="." method="_on_GoBackButton_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
